2011-01-25  Levi Weintraub  <leviw@chromium.org>

Reviewed by Darin Adler.

        Updating the expected result for 5408255 and adding tests for caret positioning at the
        beginning and end of RenderBoxes.

        Undo moves caret to invalid position
        https://bugs.webkit.org/show_bug.cgi?id=49744

        * editing/selection/caret-painting-after-paste-undo-rtl.html: Added.
        * editing/selection/caret-painting-after-paste-undo.html: Added.
        * platform/mac/editing/deleting/5408255-expected.png:
        * platform/mac/editing/selection/caret-painting-after-paste-undo-expected.checksum: Added.
        * platform/mac/editing/selection/caret-painting-after-paste-undo-expected.png: Added.
        * platform/mac/editing/selection/caret-painting-after-paste-undo-expected.txt: Added.
        * platform/mac/editing/selection/caret-painting-after-paste-undo-rtl-expected.checksum: Added.
        * platform/mac/editing/selection/caret-painting-after-paste-undo-rtl-expected.png: Added.
        * platform/mac/editing/selection/caret-painting-after-paste-undo-rtl-expected.txt: Added.
2011-01-25  Levi Weintraub  <leviw@chromium.org>

        Reviewed by Darin Adler.

        Adding border and padding to the calculation of the local caret rect for RenderBoxes.
        Corrected for mistake in r76625

        Undo moves caret to invalid position
        https://bugs.webkit.org/show_bug.cgi?id=49744

        Tests: editing/selection/caret-painting-after-paste-undo-rtl.html
               editing/selection/caret-painting-after-paste-undo.html

        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::localCaretRect):


Canonical link: https://commits.webkit.org/67056@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76839 268f45cc-cd09-0410-ab3c-d52691b4dbfc